---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 2020-11-29
  Changes:
    - Presenting burner production as a kind of recipe
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 2020-11-29
  Bugfixes:
    - fixed crash when opening help from inventory
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 2020-11-29
  Bugfixes:
    - fixed crash when creating a new game
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2020-11-28
  Bugfixes:
  Changes:
    - Activation-icon on top left corner
    - Don't sort by "IsCraftable"
    - Horizontal scrolling for recipes with lots of items involved
    - Numbers on machines
    - rewrite for better performance (the former oo-rewrite pays off)
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2020-11-20
  Bugfixes:
    - event handling improved
    - don't show 0 crafting amount
  Changes:
    - show machines
    - sorting improved
    - initiate crafting
    - initiate research
    - hiding the hidden
    - functional help on tooltips
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2020-11-15
  Bugfixes:
    - amount value for probabilistic products
  Changes:
    - info about mining improved
    - Button styles
    - ordered recipes
    - display level of technology
    - rewrite with more object orientation
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2020-11-14
  Bugfixes:
    - military things
    - positioning is not working
    - esc on selector panel not working
    - trees are not working
    - history not working