@@ -3,7 +3,9 @@ local Array = {}
 
 function Dictionary:Clone(predicate)
     local result = Dictionary:new{}
-    for key, value in pairs(self) do if not predicate or predicate(value, key) then result[key] = value end end
+    for key, value in pairs(self) do
+        if not predicate or predicate(value, key) then result[key] = value end
+    end
     return result
 end
 
@@ -36,6 +38,12 @@ function Array:new(target)
     return target
 end
 
+function Array:FromNumber(number)
+    local target = Array:new()
+    for index = 1, number do target:Append(index) end
+    return target
+end
+
 function Dictionary:Select(transformation)
     local result = Dictionary:new{}
     for key, value in pairs(self) do result[key] = transformation(value, key) end
@@ -50,7 +58,9 @@ end
 
 function Dictionary:Sum(predicate)
     local result = 0
-    for key, value in pairs(self) do if not predicate or predicate(value, key) then result = result + value end end
+    for key, value in pairs(self) do
+        if not predicate or predicate(value, key) then result = result + value end
+    end
     return result
 end
 
@@ -68,7 +78,9 @@ end
 
 function Array:Sum(predicate)
     local result = 0
-    for key, value in ipairs(self) do if not predicate or predicate(value, key) then result = result + value end end
+    for key, value in ipairs(self) do
+        if not predicate or predicate(value, key) then result = result + value end
+    end
     return result
 end
 
@@ -86,13 +98,17 @@ end
 
 function Dictionary:Count(predicate)
     local result = 0
-    for key, value in pairs(self) do if not predicate or predicate(value, key) then result = result + 1 end end
+    for key, value in pairs(self) do
+        if not predicate or predicate(value, key) then result = result + 1 end
+    end
     return result
 end
 
 function Array:Count(predicate)
     local result = 0
-    for key, value in ipairs(self) do if not predicate or predicate(value, key) then result = result + 1 end end
+    for key, value in ipairs(self) do
+        if not predicate or predicate(value, key) then result = result + 1 end
+    end
     return result
 end
 
@@ -107,12 +123,16 @@ function Array:All(predicate)
 end
 
 function Dictionary:Any(predicate)
-    for key, value in pairs(self) do if not predicate or predicate(value, key) then return true end end
+    for key, value in pairs(self) do
+        if not predicate or predicate(value, key) then return true end
+    end
     return nil
 end
 
 function Array:Any(predicate)
-    for key, value in ipairs(self) do if not predicate or predicate(value, key) then return true end end
+    for key, value in ipairs(self) do
+        if not predicate or predicate(value, key) then return true end
+    end
     return nil
 end
 
@@ -178,11 +198,17 @@ end
 
 function Array:Top(allowEmpty, allowMultiple, onEmpty, onMultiple)
     if #self == 0 then
-        if allowEmpty == false or onEmpty then error(onEmpty and onEmpty() or "Array contains no element.") end
+        if allowEmpty == false or onEmpty then
+            error(onEmpty and onEmpty() or "Array contains no element.")
+        end
         return
     elseif #self > 1 then
         if allowMultiple == false or onMultiple then
-            error(onMultiple and onMultiple(#self) or "Array contains more than one element (" .. #self .. ").")
+            error(
+               
+                    onMultiple and onMultiple(#self) or "Array contains more than one element ("
+                        .. #self .. ")."
+            )
         end
     end
     return self[1]
@@ -193,23 +219,35 @@ function Dictionary:Top(allowEmpty, allowMultiple, onEmpty, onMultiple)
     for key, value in pairs(self) do
         if allowMultiple ~= false then return {Key = key, Value = value} end
         if result then
-            error(onMultiple and onMultiple(#self) or "Array contains more than one element (" .. #self .. ").")
+            error(
+               
+                    onMultiple and onMultiple(#self) or "Array contains more than one element ("
+                        .. #self .. ")."
+            )
         end
         result = {Key = key, Value = value}
     end
 
     if result then return result end
 
-    if allowEmpty == false or onEmpty then error(onEmpty and onEmpty() or "Array contains no element.") end
+    if allowEmpty == false or onEmpty then
+        error(onEmpty and onEmpty() or "Array contains no element.")
+    end
 end
 
 function Array:Bottom(allowEmpty, allowMultiple, onEmpty, onMultiple)
     if #self == 0 then
-        if allowEmpty == false or onEmpty then error(onEmpty and onEmpty() or "Array contains no element.") end
+        if allowEmpty == false or onEmpty then
+            error(onEmpty and onEmpty() or "Array contains no element.")
+        end
         return
     elseif #self > 1 then
         if allowMultiple == false or onMultiple then
-            error(onMultiple and onMultiple(#self) or "Array contains more than one element (" .. #self .. ").")
+            error(
+               
+                    onMultiple and onMultiple(#self) or "Array contains more than one element ("
+                        .. #self .. ")."
+            )
         end
     end
     return self[#self]
@@ -236,7 +274,9 @@ function Dictionary:Concat(other, combine)
     if not other:Any() then return self end
 
     local result = self:Clone()
-    for key, value in pairs(other) do result[key] = result[key] and combine(result[key], value) or value end
+    for key, value in pairs(other) do
+        result[key] = result[key] and combine(result[key], value) or value
+    end
     return result
 end
 
@@ -255,8 +295,9 @@ function Array:Skip(count)
     return result
 end
 
-function Array:Remove(index) return table.remove( self, index) end
+function Array:Remove(index) return table.remove(self, index) end
 function Array:Append(value) return table.insert(self, value) end
+
 function Array:AppendMany(values) for _, value in ipairs(values) do table.insert(self, value) end end
 
 function Array:InsertAt(position, value) return table.insert(self, position, value) end
@@ -275,10 +316,9 @@ end
 function Dictionary:AppendForKey(key, target)
     if key then
         local list = self[key]
-        if not list then  self[key] = Array:new() end
+        if not list then self[key] = Array:new() end
         self[key]:Append(target)
     end
 end
-
 
 return Result
