@@ -98,7 +98,65 @@ local function CreateCraftingGroupPanel(frame, target, category, inCount, outCou
 
     frame.add {type = "line", direction = "horizontal"}
 
-    target:Select(function(recipe) CreateRecipeLine(frame, recipe, inCount, outCount) end)
+    if target:Count() < settings.player["ingteb_group-tab-threshold"].value then
+        target:Select(function(recipe) CreateRecipeLine(frame, recipe, inCount, outCount) end)
+    else
+        local groupPanel = frame.add {type = "tabbed-pane"}
+        target:ToGroup(function(value) return {Key = value.Group.name, Value = value} end) --
+        :Select(
+            function(value)
+                local group = value[1].Group
+                local tab = groupPanel.add {
+                    type = "tab",
+                    caption = "[item-group=" .. group.name .. "]",
+                    tooltip = group.localised_name,
+                    style = "ingteb-tab",
+                }
+                local frame = groupPanel.add {type = "frame", direction = "vertical"}
+                groupPanel.add_tab(tab, frame)
+
+                if value:Count() < settings.player["ingteb_subgroup-tab-threshold"].value then
+                    value:Select(
+                        function(recipe)
+                            CreateRecipeLine(frame, recipe, inCount, outCount)
+                        end
+                    )
+                else
+                    local groupPanel = frame.add {type = "tabbed-pane"}
+                    local g = value:ToGroup(
+                        function(value)
+                            return {Key = value.SubGroup.name, Value = value}
+                        end
+                    ) --
+                    g:Select(
+                        function(value)
+                            local group = value[1].SubGroup
+                            local caption = group.name
+                            if value[1] and value[1].Output[1] then
+                                local main = value[1].Output[1]
+                                caption = "[" .. main.SpriteType .. "=" .. main.Name .. "]"
+                            end
+                            local tab = groupPanel.add {
+                                type = "tab",
+                                caption = caption,
+                                tooltip = group.localised_name,
+                                style = "ingteb-tab",
+                            }
+                            local subFrame = groupPanel.add {type = "frame", direction = "vertical"}
+                            groupPanel.add_tab(tab, subFrame)
+
+                            value:Select(
+                                function(recipe)
+                                    CreateRecipeLine(subFrame, recipe, inCount, outCount)
+                                end
+                            )
+                        end
+                    )
+                end
+            end
+        )
+
+    end
 
     frame.add {type = "line", direction = "horizontal"}
 end
@@ -113,14 +171,14 @@ local function CreateCraftingGroupsPanel(frame, target, headerSprites)
         direction = "vertical",
     }
 
-    local labelFlow = subFrame.add {
+    local headerFlow = subFrame.add {
         type = "flow",
+        name = "headerFlow",
         direction = "horizontal",
         style = "ingteb-flow-centered",
     }
 
-    headerSprites:Select(function(sprite) labelFlow.add {type = "sprite", sprite = sprite} end)
-
+    headerFlow.add {type = "label", name = "headerSprites", caption = headerSprites}
 
     local inCount = target:Select(
         function(group)
@@ -153,14 +211,21 @@ local function CreateMainPanel(frame, target)
     }
 
     target:SortAll()
-    assert(not target.RecipeList or not next(target.RecipeList) or type(next(target.RecipeList)) == "string")
+    assert(
+        not target.RecipeList or not next(target.RecipeList) or type(next(target.RecipeList))
+            == "string"
+    )
     assert(not target.UsedBy or not next(target.UsedBy) or type(next(target.UsedBy)) == "string")
-    assert(not target.CreatedBy or not next(target.CreatedBy) or type(next(target.CreatedBy)) == "string")
+    assert(
+        not target.CreatedBy or not next(target.CreatedBy) or type(next(target.CreatedBy))
+            == "string"
+    )
 
     local mainFrame = scrollframe
-    local columnCount = (target.RecipeList and target.RecipeList:Any() and 1 or 0) + --
-    (target.UsedBy and target.UsedBy:Any() and 1 or 0) + --
-    (target.CreatedBy and target.CreatedBy:Any() and 1 or 0)
+    local columnCount --
+    = (target.RecipeList and target.RecipeList:Any() and 1 or 0) --
+          + (target.UsedBy and target.UsedBy:Any() and 1 or 0) --
+          + (target.CreatedBy and target.CreatedBy:Any() and 1 or 0) --
 
     if columnCount > 1 then
         mainFrame = scrollframe.add {type = "frame", direction = "horizontal", name = "frame"}
@@ -183,17 +248,52 @@ local function CreateMainPanel(frame, target)
         return
     end
 
-    CreateCraftingGroupsPanel(mainFrame, target.RecipeList, Array:new{target.SpriteName, "factorio"})
+    CreateCraftingGroupsPanel(
+        mainFrame, target.RecipeList, target.RichTextName .. "[img=utility/clock]"
+    )
 
     CreateCraftingGroupsPanel(
         mainFrame, target.UsedBy,
-            Array:new{target.SpriteName, "utility/go_to_arrow", "utility/missing_icon"}
+            target.RichTextName .. "[img=utility/go_to_arrow][img=utility/missing_icon]"
     )
 
     CreateCraftingGroupsPanel(
         mainFrame, target.CreatedBy,
-            Array:new{"utility/missing_icon", "utility/go_to_arrow", target.SpriteName}
+            "[img=utility/missing_icon][img=utility/go_to_arrow]" .. target.RichTextName
     )
+
+    local maximalColumCount = settings.player["ingteb_column-tab-threshold"].value
+    if maximalColumCount == 0 then maximalColumCount = columnCount end
+
+    if columnCount > maximalColumCount then
+        local tabOrder = target.TabOrder
+        if not tabOrder then
+            tabOrder = Array:FromNumber(columnCount)
+            target.TabOrder = tabOrder
+        end
+
+        tabOrder:Select(
+            function(tabIndex, order)
+                if order > maximalColumCount then
+                    frame.caption --
+                    = {
+                        "",
+                        frame.caption, --
+                        " >>> [" .. mainFrame.children[tabIndex].headerFlow.headerSprites.caption .."]",
+                    }
+                    mainFrame.children[tabIndex].visible = false
+                else
+                    mainFrame.children[tabIndex].headerFlow.add {
+                        type = "sprite-button",
+                        sprite = "hide-this-column",
+                        name =  order,
+                    }
+                end
+            end
+        )
+        global.Current.Links[frame.index] = target
+
+    end
 
 end
 
@@ -318,12 +418,13 @@ function Gui:OnGuiClick(player, event)
         return
     end
 
-    if self.Active.Presentator then
-        return self:OnGuiClickForPresentator(player, event)
-    elseif self.Active.Selector and element.type == "choose-elem-button" then
-    else
-        assert(todo)
-    end
+    if self.Active.Presentator then return self:OnGuiClickForPresentator(player, event) end
+end
+
+function Gui:UpdateTabOrder(tabOrder, dropIndex)
+    local dropTabIndex = tabOrder[tonumber(dropIndex)]
+    tabOrder:Remove(dropIndex)
+    tabOrder:Append(dropTabIndex)
 end
 
 function Gui:OnGuiClickForPresentator(player, event)
@@ -331,7 +432,7 @@ function Gui:OnGuiClickForPresentator(player, event)
     if target and target.Prototype then
         if UI.IsMouseCode(event, "--- l") then return self:PresentTarget(player, target) end
 
-        local order = target:GetHandCraftingOrder( event)
+        local order = target:GetHandCraftingOrder(event)
         if order then
             player.begin_crafting(order)
             return
@@ -342,6 +443,10 @@ function Gui:OnGuiClickForPresentator(player, event)
             player.force.add_research(order.Technology)
             return
         end
+    else
+        local target = global.Current.Links[self.Active.Presentator.index]
+         self:UpdateTabOrder(target.TabOrder, event.element.name)
+         return self:PresentTarget(player, target)
     end
 end
 
