@@ -2,8 +2,19 @@
 ingteb-main-key=Help
 ingteb-back-key=go back to former page
 ingteb-fore-key=go to next page
+
 [ingteb_utility]
 Lines2=__1__\n__2__
 Blue=[color=blue]__1__[/color]
 craft=[color=blue]__1__ __4__ to craft\n__1__ __5__ to craft 5\n__3__ __4__ to craft max[/color]
 research=[color=blue]__2__ __4__ to queue research[/color]
+
+[mod-setting-name]
+ingteb_column-tab-treshold=Use tabs when more columns than ...
+ingteb_group-tab-treshold=Use group-tabs for when more lines than ...
+ingteb_subgroup-tab-treshold=Use subgroup-tabs for when more lines than ...
+
+[mod-setting-description]
+ingteb_column-tab-treshold=set to zero to disable tabs
+ingteb_group-tab-treshold=set to zero to disable tabs
+ingteb_subgroup-tab-treshold=set to zero to disable tabs
